<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, FriendTracker!</string>
    <string name="app_name">Friend Tracker</string>
    <string name="logoutBtn">logout</string>
    <string name="FriendsLabel">Friends ID:</string>
    <string name="FriendsTxt"/>
    <string name="LookupBtn">Lookup Friend</string>
    
    <string name="UpdateBtn">Update My Location</string>
    <string name="LatLabel">Latitude:</string>
    <string name="LatTxt"/>
    <string name="LonLabel">Longitude:</string>
    <string name="LonTxt"/>
    <string name="HistoryBtn">My History</string>
    <string name="CloseBtn">Close</string>
    <string name="LoginBtn">Login</string>
    <string name="loginTxt"/>
    <string name="ViewFriendsBtn">View Friends</string>
    <string name="IdLabel">Client ID:</string>
    <string name="IPLabel">Server IP:</string>
    <string name="IPTxt"></string>
    <string name="HistoryLabel">History:</string>
    <string name="HistoryTxt"></string>
    <string name="LoginFailedLabel">Login Failed.</string>
    <string name="FriendTxt"></string>
    <string name="AddBtn">Add Friend</string>
    <string name="RemoveBtn">Remove Friend</string>
    <string name="MapBtn">View Map</string>
    
    
    
    
</resources>
